--- a/Program/Program/Form1.resx
+++ b/Program/Program/Form1.resx
@@ -123,4 +123,7 @@
 Определите верхний левый и нижний правый угол захвата координат еще двумя нажатиями C
 Для начала передвижения курсора нажмите "Начать захват"</value>
   </data>
+  <metadata name="ImageFolderBrowser.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>17, 17</value>
+  </metadata>
 </root>
